--- a/index.html
+++ b/index.html
@@ -1,12 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- main stylesheet -->
+    <link rel="stylesheet" href="./styles/style.css" />
+    <!-- responsive stylesheet -->
+    <link rel="stylesheet" href="./styles/responsive.css" />
     <title>G3 Architects</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!-- header section -->
+    <div class="header_and_banner">
+      <div class="container">
+        <nav class="nav">
+          <div class="logo">
+            <h3>
+              <a href="#"> G3 Architects </a>
+            </h3>
+          </div>
+          <div class="menu">
+            <ul type="none">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Login</a></li>
+            </ul>
+          </div>
+        </nav>
+
+        <!-- header end -->
+        <!-- banner -->
+        <section class="banner">
+          <!-- banner text -->
+          <article class="banner_text">
+            <h1 class="banner_title">
+              Brand New <br />
+              Group of Architects
+            </h1>
+            <p class="banner_description">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in <br />
+              some form, by injected humour, or randomised words which don't
+              look even
+            </p>
+            <div class="action">
+              <a href="#">Explore More</a>
+            </div>
+          </article>
+          <!-- banner image -->
+          <article class="banner_image">
+            <img src="./images/banner.png" alt="banner image" />
+          </article>
+        </section>
+      </div>
+    </div>
+    <!-- header and banner end -->
+    <!-- quick list section start -->
+    <section class="team_section">
+      <div class="container">
+        <div class="team_container">
+          <article class="team_image">
+            <img src="./images/team1.png" alt="" />
+            <img src="./images/team2.png" alt="" />
+            <img src="./images/team3.png" alt="" />
+            <img src="./images/team4.png" alt="" />
+          </article>
+          <article class="team_text">
+            <h3>
+              <span class="text-dark3">Quick list</span>
+              <span class="text-dark1">of Our</span>
+              <span class="text-action">Feature</span>
+            </h3>
+            <p class="text-dark3">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+            </p>
+            <div>
+              <a class="btn-action" href="#">Explore More</a>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+    <!-- Feature section -->
+    <section class="feature_section">
+      <div class="container">
+        <div class="feature_container">
+          <!-- feature title -->
+          <article class="feature_title" id="f-1">
+            <div class="feature_content">
+              <h3 class="text-dark1">Features you will love & enjoy</h3>
+              <p class="text-dark3">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+            </p>
+            </div>
+          </article>
+          <!-- box 1 -->
+          <article class="feature" id="f-2">
+            <div class="feature_box">
+              <h4>Dexktop & Mobile Version</h4>
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........  </p>
+            </div>
+          </article>
+          <!-- box 2 -->
+          <article class="feature" id="f-3">
+             <div class="feature_box">
+              <h4>Dexktop & Mobile Version</h4>
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........  </p>
+            </div>
+          </article>
+          <!-- box 3 -->
+          <article class="feature" id="f-4">
+            <div class="feature_box">
+              <h4>Dexktop & Mobile Version</h4>
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........  </p>
+            </div>
+          </article>
+          <!-- box 4 -->
+          <article class="feature" id="f-5">
+            <div class="feature_box">
+              <h4>Dexktop & Mobile Version</h4>
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........  </p>
+            </div>
+          </article>
+          <!-- box 5 -->
+           <article class="feature" id="f-5">
+            <div class="feature_box">
+              <h4>Dexktop & Mobile Version</h4>
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........  </p>
+            </div>
+          </article>
+            <!-- box 6 -->
+           <article class="feature" id="f-5">
+            <div class="feature_box">
+              <h4>Dexktop & Mobile Version</h4>
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........  </p>
+            </div>
+          </article>
+          <!-- feature image container -->
+          <article class="feature_image_container" id="f-6">
+            <div class="f_image">
+              <img src="./images/architect.png" alt="" />
+            </div>
+            <div class="f_exp_container hide">
+              <div class="f_experience">
+                <a href="#"> 10+ Year </a>
+                <span>Experienct</span>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
