--- a/index.html
+++ b/index.html
@@ -94,68 +94,152 @@
             <div class="feature_content">
               <h3 class="text-dark1">Features you will love & enjoy</h3>
               <p class="text-dark3">
-              There are many variations of passages of Lorem Ipsum available,
-              but the majority have suffered alteration in some form, by
-              injected humour, or randomised words which don't look even
-            </p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+              </p>
             </div>
           </article>
           <!-- box 1 -->
           <article class="feature" id="f-2">
             <div class="feature_box">
               <h4>Dexktop & Mobile Version</h4>
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........  </p>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
             </div>
           </article>
           <!-- box 2 -->
           <article class="feature" id="f-3">
-             <div class="feature_box">
-              <h4>Dexktop & Mobile Version</h4>
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........  </p>
+            <div class="feature_box">
+              <h4>Drag & Drop Builder</h4>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
             </div>
           </article>
           <!-- box 3 -->
           <article class="feature" id="f-4">
             <div class="feature_box">
-              <h4>Dexktop & Mobile Version</h4>
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........  </p>
+              <h4>Awesome Modern Design</h4>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
             </div>
           </article>
           <!-- box 4 -->
           <article class="feature" id="f-5">
             <div class="feature_box">
-              <h4>Dexktop & Mobile Version</h4>
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........  </p>
+              <h4>Super Easy to Edit</h4>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
             </div>
           </article>
           <!-- box 5 -->
-           <article class="feature" id="f-5">
+          <article class="feature" id="f-5">
             <div class="feature_box">
-              <h4>Dexktop & Mobile Version</h4>
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........  </p>
+              <h4>User Friendly Dashboard</h4>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
             </div>
           </article>
-            <!-- box 6 -->
-           <article class="feature" id="f-5">
-            <div class="feature_box">
-              <h4>Dexktop & Mobile Version</h4>
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........  </p>
-            </div>
-          </article>
+         
           <!-- feature image container -->
           <article class="feature_image_container" id="f-6">
-            <div class="f_image">
-              <img src="./images/architect.png" alt="" />
-            </div>
-            <div class="f_exp_container hide">
-              <div class="f_experience">
-                <a href="#"> 10+ Year </a>
-                <span>Experienct</span>
+            <div class="architect">
+              <div class="architect_img">
+                <img src="./images/architect.png" alt="" />
+                <!-- experience -->
+                <div class="f_exp_container">
+                <div class="f_experience">
+                  <a href="#"> 10+ Year </a>
+                  <span>Experienct</span>
+                </div>
               </div>
+              </div>              
             </div>
           </article>
         </div>
       </div>
     </section>
+    <!-- some facts -->
+    <section class="facts">
+      <div class="container"> 
+        <div class="facts_container"> 
+          <div class="facts_title"> 
+            <h3 class="text-dark1 section_title">
+              Some Facts
+            </h3>
+            <p> 
+              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.  
+            </p>
+          </div>
+        </div>
+        <div class="fact_box_container"> 
+          <div class="fact_box">
+            <img src="./images//icons/customers.png" alt="">
+            <h3>54</h3>
+            <p>Award wining</p>
+          </div>
+          <div class="fact_box">
+            <img src="./images/icons/projects.png" alt="">
+            <h3>1458</h3>
+            <p>Projects finished</p>
+          </div>
+          <div class="fact_box">
+            <img src="./images/icons/ribon.png" alt="">
+            <h3>590</h3>
+            <p>Clients worked</p>
+          </div>
+          <div class="fact_box">
+            <img src="./images/icons/email.png" alt="">
+            <h3>22578</h3>
+            <p>Email send</p>
+          </div>           
+        </div>
+      </div>
+    </section>
+
+    <!-- sponsor section -->
+    <section class="sponsor"> 
+      <div class="container"> 
+        <div class="sponsor_title"> 
+            <h3 class="text-dark1 section_title">
+              Our Sponsors
+            </h3>
+            <p> 
+             There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration. 
+            </p>
+          </div>
+          <!-- sponsolr logos -->
+          <div class="sponsor_logos"> 
+            <div class="s_logo"><img src="./images/sponsors/spotify.png" alt=""></div>
+            <div class="s_logo"><img src="./images/sponsors/amazon.png" alt=""></div>
+            <div class="s_logo"><img src="./images/sponsors/google.png" alt=""></div>
+            <div class="s_logo"><img src="./images/sponsors/telerama.png" alt=""></div>
+              <div class="s_logo"><img src="./images/sponsors/figma.png" alt=""></div>
+          </div>
+      </div>
+    </section>
+
+    <!-- footer -->
+    <footer class="footer"> 
+      <div class="container"> 
+        <p> All rights reserved copyright@2023 startup landing page design </p>
+      </div>
+    </footer>
+
   </body>
 </html>
