rotating border added

--- a/index.html
+++ b/index.html
@@ -188,26 +188,26 @@
           </div>
         </div>
         <div class="fact_box_container"> 
-          <div class="fact_box">
+          <article class="fact_box">
             <img src="./images//icons/customers.png" alt="">
             <h3>54</h3>
             <p>Award wining</p>
-          </div>
-          <div class="fact_box">
+          </article>
+          <article class="fact_box">
             <img src="./images/icons/projects.png" alt="">
             <h3>1458</h3>
             <p>Projects finished</p>
-          </div>
-          <div class="fact_box">
+          </article>
+          <article class="fact_box">
             <img src="./images/icons/ribon.png" alt="">
             <h3>590</h3>
             <p>Clients worked</p>
-          </div>
-          <div class="fact_box">
+          </article>
+          <article class="fact_box">
             <img src="./images/icons/email.png" alt="">
             <h3>22578</h3>
             <p>Email send</p>
-          </div>           
+          </article>           
         </div>
       </div>
     </section>
